--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "postinstall": "npm run typings && npm prune",
     "start": "npm run build && concurrently \"npm run watch\" \"npm run lite\" ",
     "pretest": "npm run build",
-    "build": "node node_modules/typescript/bin/tsc",
-    "watch": "node node_modules/typescript/bin/tsc -w",
+    "build": "node node_modules/typescript/bin/tsc && gulp build.css",
+    "watch": "concurrently \"node_modules/typescript/bin/tsc -w\" \"gulp build.css:watch\" ",
     "test": "karma start tests/karma.conf.js",
     "lite": "lite-server -c tools/bs-config.js",
     "typings": "node node_modules/typings/dist/bin.js install"
@@ -24,13 +24,19 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.6",
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.2.2",
     "lite-server": "^2.2.0",
-    "typescript": "^1.8.7",
+    "typescript": "^1.8.10",
     "typings": "^0.7.8"
   }
 }
