--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
+    "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
