--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ tools/**/*.js
 tools/**/*.js.map
 
 dist/dev
+dist/**/*.js
+dist/**/*.d.ts
+!dist/**/*.css
+!dist/bundles/*
+dist/bundles/zero-blocks.dev.js
+!dist/package.json
