Add styling to tab control

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ tests/unit/**/*.js.map
 
 tools/**/*.js
 tools/**/*.js.map
+
+dist/dev
+dist/**/*.js
+dist/**/*.d.ts
+!dist/**/*.css
+!dist/bundles/*
+dist/bundles/zero-blocks.dev.js
+!dist/package.json
