--- a/package.json
+++ b/package.json
@@ -6,37 +6,49 @@
     "postinstall": "npm run typings && npm prune",
     "start": "npm run build && concurrently \"npm run watch\" \"npm run lite\" ",
     "pretest": "npm run build",
-    "build": "node node_modules/typescript/bin/tsc && gulp build.css",
-    "watch": "concurrently \"node_modules/typescript/bin/tsc -w\" \"gulp build.css:watch\" ",
+    "build": "gulp build",
+    "bundle": "gulp bundle && gulp cleanup",
+    "watch": "gulp watch",
     "test": "karma start tests/karma.conf.js",
     "lite": "lite-server -c tools/bs-config.js",
     "typings": "node node_modules/typings/dist/bin.js install"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.13",
+    "angular2": "^2.0.0-beta.17",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
     "hammerjs": "^2.0.6",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.24",
-    "zone.js": "^0.6.9"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
+    "coveralls": "^2.11.9",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
+    "gulp-inline-ng2-template": "^1.1.4",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.0",
     "gulp-watch": "^4.3.5",
+    "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.19",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.5",
     "karma-jasmine": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.1",
     "lite-server": "^2.2.0",
+    "merge-stream": "^1.0.0",
+    "systemjs-builder": "^0.15.15",
+    "ts-node": "^0.7.2",
     "typescript": "^1.8.10",
-    "typings": "^0.7.8"
+    "typings": "^0.7.8",
+    "vinyl-paths": "^2.1.0"
   }
 }
