--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zero-blocks",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "postinstall": "npm run typings && npm prune",
@@ -14,13 +14,16 @@
     "typings": "node node_modules/typings/dist/bin.js install"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.35.0",
-    "hammerjs": "^2.0.6",
-    "reflect-metadata": "0.1.2",
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "core-js": "^2.4.0",
+    "hammerjs": "^2.0.8",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.24",
+    "systemjs": "^0.19.29",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
