updating samples with new config and modules
updated resource refrences
new shared systemjs config file
removing list from nav drawer samples and fixing templates
temp fix for getDOM() usage though indexed module loads

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ gulpfile.js*
 
 samples/**/*.js
 samples/**/*.js.map
-!samples/**/config.js
+!samples/**/*.config.js
 
 src/**/*.js
 src/**/*.js.map
