#33 Update to Angular RC4

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "typings": "node node_modules/typings/dist/bin.js install"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.3",
-    "@angular/compiler": "^2.0.0-rc.3",
-    "@angular/core": "^2.0.0-rc.3",
-    "@angular/platform-browser": "^2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
+    "@angular/common": "^2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.4",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "core-js": "^2.4.0",
     "hammerjs": "^2.0.8",
     "reflect-metadata": "^0.1.3",
@@ -34,24 +34,24 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
-    "gulp-inline-ng2-template": "^1.1.4",
+    "gulp-inline-ng2-template": "2.0.4",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.0",
     "gulp-watch": "^4.3.5",
     "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.5",
-    "karma-jasmine": "^0.2.2",
+    "karma": "1.1.1",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-coverage": "1.1.0",
+    "karma-jasmine": "1.0.2",
     "karma-mocha-reporter": "^2.0.1",
     "lite-server": "^2.2.0",
     "merge-stream": "^1.0.0",
     "systemjs-builder": "^0.15.15",
-    "ts-node": "^0.7.2",
+    "ts-node": "0.9.3",
     "typescript": "^1.8.10",
-    "typings": "^0.7.8",
+    "typings": "1.3.1",
     "vinyl-paths": "^2.1.0"
   }
 }
