--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - sleep 3
 before_script:
   - npm install -g gulp
+  - npm install
 script:
   - npm test
   - cat ./coverage/report-lcov/lcov.info | coveralls
