Fix some list issues; add command line in travis.yml - potential fix for build crash after instaling RC4;

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sleep 3
 before_script:
   - npm install -g gulp
-  - npm install
+  - tsc --project tsconfig.json
 script:
   - npm test
   - cat ./coverage/report-lcov/lcov.info | coveralls
