--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sleep 3
 before_script:
   - npm install -g gulp
-  - tsc --project tsconfig.json
+  - npm install typings --global
 script:
   - npm test
   - cat ./coverage/report-lcov/lcov.info | coveralls
