--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@angular/core": "^2.0.0-rc.4",
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
-    "core-js": "^2.4.0",
+    "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "^0.19.29",
+    "systemjs": "^0.19.31",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
@@ -38,20 +38,20 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
-    "gulp-watch": "^4.3.5",
+    "gulp-watch": "^4.3.8",
     "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
     "jasmine-core": "^2.4.1",
     "karma": "1.1.1",
     "karma-chrome-launcher": "1.0.1",
     "karma-coverage": "1.1.0",
     "karma-jasmine": "1.0.2",
-    "karma-mocha-reporter": "^2.0.1",
+    "karma-mocha-reporter": "^2.0.4",
     "lite-server": "^2.2.0",
     "merge-stream": "^1.0.0",
-    "systemjs-builder": "^0.15.15",
-    "ts-node": "0.9.3",
+    "systemjs-builder": "0.15.23",
+    "ts-node": "1.0.0",
     "typescript": "^1.8.10",
-    "typings": "1.3.1",
+    "typings": "^1.3.1",
     "vinyl-paths": "^2.1.0"
   }
 }
