--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-jasmine": "1.0.2",
     "karma-mocha-reporter": "^2.0.4",
     "lite-server": "^2.2.0",
+    "material-design-icons": "^3.0.1",
     "merge-stream": "^1.0.0",
     "systemjs-builder": "0.15.23",
     "ts-node": "1.0.0",
