-merged with rkaraivanov fork -added fonts task to copy fonts to distribution folder -added gulp-plumber to bypass watch tasks breaking upon gulp plugin failures -use arrow functions across all tasks for syntax consistency -use zero-blocks default theme in input demo -remove old css files -update font paths

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-inline-ng2-template": "2.0.4",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
