--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "material-design-icons": "^3.0.1",
         "merge-stream": "^1.0.0",
         "systemjs-builder": "0.15.31",
+        "ts-node": "1.3.0",
         "vinyl-paths": "^2.1.0",
         "rimraf": "^2.4.3"
     }
