--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "zero-blocks",
+    "name": "igniteui-js-blocks",
     "version": "0.1.0",
     "license": "MIT",
     "scripts": {
@@ -15,19 +15,19 @@
         "typings": "node node_modules/typings/dist/bin.js"
     },
     "dependencies": {
-        "@angular/common": "2.0.0",
-        "@angular/compiler": "2.0.0",
-        "@angular/core": "2.0.0",
-        "@angular/forms": "2.0.0",
-        "@angular/http": "2.0.0",
-        "@angular/platform-browser": "2.0.0",
-        "@angular/platform-browser-dynamic": "2.0.0",
-        "@angular/router": "3.0.0",
-        "@angular/upgrade": "2.0.0",
+        "@angular/common": "~2.0.0",
+        "@angular/compiler": "~2.0.0",
+        "@angular/core": "~2.0.0",
+        "@angular/forms": "~2.0.0",
+        "@angular/http": "~2.0.0",
+        "@angular/platform-browser": "~2.0.0",
+        "@angular/platform-browser-dynamic": "~2.0.0",
+        "@angular/router": "~3.0.0",
+        "@angular/upgrade": "~2.0.0",
         "core-js": "^2.4.1",
         "reflect-metadata": "^0.1.3",
         "rxjs": "5.0.0-beta.12",
-        "systemjs": "0.19.27",
+        "systemjs": "^0.19.27",
         "zone.js": "^0.6.23",
         "angular2-in-memory-web-api": "0.0.20",
         "hammerjs": "^2.0.8"
@@ -59,8 +59,8 @@
         "karma-jasmine": "^0.3.8",
         "material-design-icons": "^3.0.1",
         "merge-stream": "^1.0.0",
-        "systemjs-builder": "0.15.31",
-        "ts-node": "1.3.0",
+        "systemjs-builder": "^0.15.31",
+        "ts-node": "^1.3.0",
         "vinyl-paths": "^2.1.0",
         "rimraf": "^2.4.3"
     }
