--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
         "@angular/upgrade": "^2.0.0",
         "core-js": "^2.4.1",
         "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-beta.12",
+        "rxjs": "^5.0.1",
         "systemjs": "^0.19.27",
-        "zone.js": "^0.6.23",
-        "angular2-in-memory-web-api": "0.0.20",
+        "zone.js": "^0.7.2",
         "hammerjs": "^2.0.8"
     },
     "devDependencies": {
