Migrate to Angular 4. initial commit.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "license": "MIT",
     "scripts": {
-        "postinstall": "npm run typings install && npm prune",
+        "postinstall": "npm prune",
         "start": "npm run build && concurrently \"npm run watch\" \"npm run lite\"",
         "pretest": "npm run build",
         "build": "gulp build",
@@ -11,56 +11,67 @@
         "watch": "gulp watch",
         "lite": "lite-server",
         "test-dev": "concurrently \"npm run watch\" \"karma start karma.conf.js\"",
-        "test": "karma start karma.conf.js --single-run",
-        "typings": "node node_modules/typings/dist/bin.js"
+        "test": "karma start karma.conf.js --single-run"
     },
     "dependencies": {
-        "@angular/common": "^2.0.0",
-        "@angular/compiler": "^2.0.0",
-        "@angular/core": "^2.0.0",
-        "@angular/forms": "^2.0.0",
-        "@angular/http": "^2.0.0",
-        "@angular/platform-browser": "^2.0.0",
-        "@angular/platform-browser-dynamic": "^2.0.0",
-        "@angular/router": "^3.0.0",
-        "@angular/upgrade": "^2.0.0",
+        "@angular/animations": "^4.0.0",
+        "@angular/common": "^4.0.0",
+        "@angular/compiler": "^4.0.0",
+        "@angular/core": "^4.0.0",
+        "@angular/forms": "^4.0.0",
+        "@angular/http": "^4.0.0",
+        "@angular/platform-browser": "^4.0.0",
+        "@angular/platform-browser-dynamic": "^4.0.0",
+        "@angular/router": "^4.0.0",
         "core-js": "^2.4.1",
-        "reflect-metadata": "^0.1.3",
+        "reflect-metadata": "^0.1.10",
         "rxjs": "^5.0.1",
-        "systemjs": "^0.19.27",
-        "zone.js": "^0.7.2",
+        "systemjs": "^0.19.40",
+        "zone.js": "^0.8.8",
         "hammerjs": "^2.0.8"
     },
     "devDependencies": {
-        "concurrently": "^2.2.0",
-        "lite-server": "^2.2.2",
-        "typescript": "^2.0.2",
-        "typings":"^1.3.2",
+        "concurrently": "^3.2.0",
+        "lite-server": "^2.3.0",
+        "typescript": "^2.2.2",
         "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
 
         "del": "^2.2.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^3.1.1",
-        "gulp-clean-css": "^2.0.12",
-        "gulp-concat": "^2.6.0",
-        "gulp-inline-ng2-template": "^3.0.1",
+        "gulp-clean-css": "^3.0.4",
+        "gulp-concat": "^2.6.1",
+        "gulp-inline-ng2-template": "^4.0.0",
         "gulp-plumber": "^1.1.0",
-        "gulp-sass": "^2.3.2",
+        "gulp-sass": "^3.1.0",
         "gulp-sourcemaps": "^1.6.0",
-        "gulp-typescript": "^2.13.6",
-        "gulp-watch": "^4.3.9",
-        "jasmine-core": "~2.4.1",
-        "coveralls": "^2.11.14",
-        "karma": "^1.2.0",
-        "karma-chrome-launcher": "^0.2.3",
+        "gulp-typescript": "^3.1.6",
+        "gulp-watch": "^4.3.11",
+        "jasmine-core": "~2.6.0",
+        "coveralls": "^2.13.0",
+        "karma": "^1.6.0",
+        "karma-chrome-launcher": "^2.0.0",
         "karma-coverage": "^1.1.1",
-        "karma-mocha-reporter": "^2.2.0",
-        "karma-jasmine": "^0.3.8",
+        "karma-mocha-reporter": "^2.2.3",
+        "karma-jasmine": "^1.1.0",
         "material-design-icons": "^3.0.1",
-        "merge-stream": "^1.0.0",
-        "systemjs-builder": "^0.15.31",
-        "ts-node": "^1.3.0",
+        "merge-stream": "^1.0.1",
+        "systemjs-builder": "^0.16.4",
+        "ts-node": "^3.0.2",
         "vinyl-paths": "^2.1.0",
-        "rimraf": "^2.4.3"
+        "rimraf": "^2.6.1",
+
+        "@types/core-js": "^0.9.41",
+        "@types/jasmine": "^2.5.47",
+        "@types/node": "^6.0.46",
+        "@types/hammerjs": "^2.0.34",
+        "@types/gulp": "^4.0.2",
+        "@types/gulp-autoprefixer": "^0.0.30",
+        "@types/gulp-plumber": "^0.0.30",
+        "@types/gulp-sass": "^0.0.30",
+        "@types/gulp-sourcemaps": "^0.0.30",
+        "@types/merge-stream": "^1.0.28",
+        "@types/orchestrator": "^0.0.31",
+        "@types/q": "^1.0.0"
     }
 }
