Initial commit enabling tslint and fixing

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 before_script:
 - npm install -g gulp
 script:
+- npm run lint
 - npm test
 - cat ./coverage/report-lcov/lcov.info | coveralls
 
