Enable TSLint for the demos folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
 - npm install -g gulp
 script:
 - npm run lint
+- npm run lint-demos
 - npm test
 - cat ./coverage/report-lcov/lcov.info | coveralls
 
