--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "lite": "lite-server",
         "test-dev": "concurrently \"npm run watch\" \"karma start karma.conf.js\"",
         "test": "karma start karma.conf.js --single-run",
-		"lint": "tslint src/**/*.ts",
+        "lint": "tslint src/**/*.ts",
         "lint-demos": "tslint demos/**/*.ts",
-		"lint-dev": "tslint src/**/*.ts --fix"
+        "lint-dev": "tslint src/**/*.ts --fix"
     },
     "dependencies": {
         "@angular/animations": "^4.0.0",
@@ -27,19 +27,27 @@
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
         "core-js": "^2.4.1",
+        "hammerjs": "^2.0.8",
         "reflect-metadata": "^0.1.10",
         "rxjs": "^5.0.1",
         "systemjs": "^0.19.40",
-        "zone.js": "^0.8.8",
-        "hammerjs": "^2.0.8"
+        "zone.js": "^0.8.8"
     },
     "devDependencies": {
+        "@types/core-js": "^0.9.41",
+        "@types/gulp": "^4.0.2",
+        "@types/gulp-autoprefixer": "^0.0.30",
+        "@types/gulp-plumber": "^0.0.30",
+        "@types/gulp-sass": "^0.0.30",
+        "@types/gulp-sourcemaps": "^0.0.30",
+        "@types/hammerjs": "^2.0.34",
+        "@types/jasmine": "^2.5.47",
+        "@types/merge-stream": "^1.0.28",
+        "@types/node": "^6.0.46",
+        "@types/orchestrator": "^0.0.31",
+        "@types/q": "^1.0.0",
         "concurrently": "^3.2.0",
-        "lite-server": "^2.3.0",
-        "typescript": "^2.2.2",
-        "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
-		"tslint": "^5.1.0",
-
+        "coveralls": "^2.13.0",
         "del": "^2.2.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^3.1.1",
@@ -51,31 +59,22 @@
         "gulp-sourcemaps": "^1.6.0",
         "gulp-typescript": "^3.1.6",
         "gulp-watch": "^4.3.11",
+        "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
         "jasmine-core": "~2.6.0",
-        "coveralls": "^2.13.0",
         "karma": "^1.6.0",
         "karma-chrome-launcher": "^2.0.0",
         "karma-coverage": "^1.1.1",
-        "karma-mocha-reporter": "^2.2.3",
         "karma-jasmine": "^1.1.0",
+        "karma-mocha-reporter": "^2.2.3",
+        "lite-server": "^2.3.0",
         "material-design-icons": "^3.0.1",
         "merge-stream": "^1.0.1",
+        "rimraf": "^2.6.1",
+        "sass-lint": "^1.10.2",
         "systemjs-builder": "^0.16.4",
         "ts-node": "^3.0.2",
-        "vinyl-paths": "^2.1.0",
-        "rimraf": "^2.6.1",
-
-        "@types/core-js": "^0.9.41",
-        "@types/jasmine": "^2.5.47",
-        "@types/node": "^6.0.46",
-        "@types/hammerjs": "^2.0.34",
-        "@types/gulp": "^4.0.2",
-        "@types/gulp-autoprefixer": "^0.0.30",
-        "@types/gulp-plumber": "^0.0.30",
-        "@types/gulp-sass": "^0.0.30",
-        "@types/gulp-sourcemaps": "^0.0.30",
-        "@types/merge-stream": "^1.0.28",
-        "@types/orchestrator": "^0.0.31",
-        "@types/q": "^1.0.0"
+        "tslint": "^5.1.0",
+        "typescript": "^2.2.2",
+        "vinyl-paths": "^2.1.0"
     }
 }
