--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 sudo: required
 dist: trusty
 language: node_js
+group: deprecated-2017Q2
 node_js:
 - '5'
 before_install:
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - sudo apt-get update
+  - sudo apt-get -qq update
   - sudo apt-get install -y libappindicator1 fonts-liberation
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
   - sudo dpkg -i google-chrome*.deb
