--- a/package.json
+++ b/package.json
@@ -17,41 +17,41 @@
         "lint-dev": "tslint src/**/*.ts --fix"
     },
     "dependencies": {
-        "@angular/animations": "^4.0.0",
-        "@angular/common": "^4.0.0",
-        "@angular/compiler": "^4.0.0",
-        "@angular/core": "^4.0.0",
-        "@angular/forms": "^4.0.0",
-        "@angular/http": "^4.0.0",
-        "@angular/platform-browser": "^4.0.0",
-        "@angular/platform-browser-dynamic": "^4.0.0",
-        "@angular/router": "^4.0.0",
+        "@angular/animations": "^4.2.5",
+        "@angular/common": "^4.2.5",
+        "@angular/compiler": "^4.2.5",
+        "@angular/core": "^4.2.5",
+        "@angular/forms": "^4.2.5",
+        "@angular/http": "^4.2.5",
+        "@angular/platform-browser": "^4.2.5",
+        "@angular/platform-browser-dynamic": "^4.2.5",
+        "@angular/router": "^4.2.5",
         "core-js": "^2.4.1",
         "hammerjs": "^2.0.8",
         "reflect-metadata": "^0.1.10",
-        "rxjs": "^5.0.1",
+        "rxjs": "^5.4.1",
         "systemjs": "^0.19.40",
         "zone.js": "^0.8.8"
     },
     "devDependencies": {
-        "@types/core-js": "^0.9.41",
-        "@types/gulp": "^3.8.32",
+        "@types/core-js": "^0.9.42",
+        "@types/gulp": "^3.8.33",
         "@types/gulp-autoprefixer": "^0.0.30",
         "@types/gulp-plumber": "^0.0.30",
         "@types/gulp-sass": "^0.0.30",
         "@types/gulp-sourcemaps": "^0.0.30",
         "@types/hammerjs": "^2.0.34",
-        "@types/jasmine": "^2.5.47",
+        "@types/jasmine": "^2.5.53",
         "@types/merge-stream": "^1.0.28",
-        "@types/node": "^6.0.46",
+        "@types/node": "^6.0.79",
         "@types/orchestrator": "^0.0.31",
-        "@types/q": "^1.0.0",
-        "concurrently": "^3.2.0",
+        "@types/q": "^1.0.2",
+        "concurrently": "^3.5.0",
         "coveralls": "^2.13.0",
         "del": "^2.2.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^3.1.1",
-        "gulp-clean-css": "^3.0.4",
+        "gulp-clean-css": "^3.5.0",
         "gulp-concat": "^2.6.1",
         "gulp-inline-ng2-template": "^4.0.0",
         "gulp-plumber": "^1.1.0",
@@ -60,9 +60,9 @@
         "gulp-typescript": "^3.1.6",
         "gulp-watch": "^4.3.11",
         "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
-        "jasmine-core": "~2.6.0",
+        "jasmine-core": "^2.6.4",
         "karma": "^1.6.0",
-        "karma-chrome-launcher": "^2.0.0",
+        "karma-chrome-launcher": "^2.2.0",
         "karma-coverage": "^1.1.1",
         "karma-jasmine": "^1.1.0",
         "karma-mocha-reporter": "^2.2.3",
@@ -71,8 +71,8 @@
         "merge-stream": "^1.0.1",
         "rimraf": "^2.6.1",
         "sass-lint": "^1.10.2",
-        "systemjs-builder": "^0.16.4",
-        "ts-node": "^3.0.2",
+        "systemjs-builder": "^0.16.9",
+        "ts-node": "^3.1.0",
         "tslint": "^5.1.0",
         "typescript": "2.3.4",
         "vinyl-paths": "^2.1.0"
