--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "igniteui-js-blocks",
     "version": "0.1.0",
-    "license": "MIT",
+    "license": "Apache 2.0",
     "scripts": {
         "postinstall": "npm prune",
         "start": "npm run build && concurrently \"npm run watch\" \"npm run lite\"",
