--- a/.gitignore
+++ b/.gitignore
@@ -57,17 +57,7 @@ src/**/*.js.map
 src/**/*.css
 src/**/*.css.map
 
-
-dist/**/*
-dist/dev
-dist/**/*.js
-dist/**/*.d.ts
-dist/*.css
-!dist/**/*.css
-!dist/bundles/*
-dist/bundles/zero-blocks.dev.js
-!dist/package.json
-dist/README.md
+dist
 
 # vscode
 .vscode
