--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,10 @@ before_install:
 before_script:
 - npm install -g gulp
 script:
-- npm run lint
-- npm run lint-demos
-- npm test
-- if [ "${TRAVIS_REPO_SLUG}" == "IgniteUI/igniteui-js-blocks" ]; then cat ./coverage/report-lcov/lcov.info | coveralls; fi
+- npm run ci
+- if [ "${TRAVIS_REPO_SLUG}" == "IgniteUI/igniteui-js-blocks" ]; then cat ./coverage/lcov.info | coveralls; fi
 
 before_deploy:
-- npm run bundle
 # move to dist
 - cd dist
 # update package versions
