--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "build:docs": "typedoc src/",
         "ci": "npm run lint && npm run test && npm run build",
         "clean": "rimraf coverage tmp dist",
-        "codecov": "cat coverage/lcov.info | codecov",
+        "codecov": "cat coverage/lcov.info | coveralls",
         "explorer": "source-map-explorer dist/index.umd.js",
         "lint": "npm run tslint 'src/**/*.ts'",
         "ngcompile": "ngc -p tsconfig-aot.json",
@@ -68,7 +68,7 @@
         "angular2-template-loader": "^0.6.2",
         "autoprefixer": "^7.1.4",
         "awesome-typescript-loader": "^3.2.3",
-        "codecov": "^2.3.0",
+        "coveralls": "^3.0.0",
         "concurrently": "^3.5.0",
         "css-loader": "^0.28.7",
         "gulp": "^3.9.1",
