--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@angular/core": "^4.4.4",
         "@angular/forms": "^4.4.4",
         "@angular/platform-browser": "^4.4.6",
+        "@angular/platform-browser-dynamic": "^4.4.6",
         "hammerjs": "^2.0.8",
         "rxjs": "^5.5.2"
     },
