--- a/demos/package.json
+++ b/demos/package.json
@@ -14,21 +14,21 @@
         "start": "concurrently --raw --kill-others \"gulp copy-lib:watch\" \"webpack-dev-server --open --watch --config webpack.config.js\""
     },
     "dependencies": {
-        "@angular/animations": "^4.4.4",
-        "@angular/common": "^4.4.4",
-        "@angular/core": "^4.4.4",
-        "@angular/forms": "^4.4.4",
-        "@angular/http": "^4.4.4",
-        "@angular/router": "^4.4.4",
-        "@angular/platform-browser": "^4.4.4",
-        "@angular/platform-browser-dynamic": "^4.4.4"
+        "@angular/animations": "^5.0.0",
+        "@angular/common": "^5.0.0",
+        "@angular/core": "^5.0.0",
+        "@angular/forms": "^5.0.0",
+        "@angular/http": "^5.0.0",
+        "@angular/router": "^5.0.0",
+        "@angular/platform-browser": "^5.0.0",
+        "@angular/platform-browser-dynamic": "^5.0.0"
     },
     "devDependencies": {
-        "@types/node": "^8.0.31",
-        "@angular/compiler": "^4.4.4",
-        "@angular/compiler-cli": "^4.4.4",
+        "@types/node": "^8.0.47",
+        "@angular/compiler": "^5.0.0",
+        "@angular/compiler-cli": "^5.0.0",
         "angular2-template-loader": "^0.6.2",
-        "awesome-typescript-loader": "^3.2.3",
+        "awesome-typescript-loader": "^3.3.0",
         "concurrently": "^3.5.0",
         "core-js": "^2.5.1",
         "copyfiles": "^1.2.0",
@@ -36,15 +36,16 @@
         "gulp": "^3.9.1",
         "html-webpack-plugin": "^2.30.1",
         "file-loader": "^1.1.5",
+        "node-sass": "^4.0.0",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.6.2",
-        "rxjs": "^5.4.3",
+        "rxjs": "^5.5.2",
         "to-string-loader": "^1.1.5",
-        "typescript": "^2.5.3",
+        "typescript": "2.4.2",
         "sass-loader": "^6.0.6",
         "svg-inline-loader": "^0.8.0",
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.9.1",
+        "webpack": "^3.8.1",
+        "webpack-dev-server": "^2.9.4",
         "zone.js": "^0.8.18"
     }
 }
