--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "keywords": [
         "igniteui-js-blocks",
         "angular",
-		"angular4",
-		"UI components",
-		"grid"
+        "angular4",
+        "UI components",
+        "grid"
     ],
     "scripts": {
         "build": "npm run build:esm && npm run build:umd && gulp make-packagejson",
@@ -42,42 +42,34 @@
         "start:dev": "concurrently --raw --kill-others \"npm run build:esm:watch\" \"npm run start:demos\""
     },
     "dependencies": {
-        "@angular/animations": "^4.4.4",
-        "@angular/common": "^4.4.4",
-        "@angular/compiler": "^4.4.4",
-        "@angular/core": "^4.4.4",
-        "@angular/forms": "^4.4.4",
-        "@angular/platform-browser": "^4.4.6",
-        "@angular/platform-browser-dynamic": "^4.4.6",
+        "@angular/animations": "^5.0.0",
+        "@angular/common": "^5.0.0",
+        "@angular/compiler": "^5.0.0",
+        "@angular/core": "^5.0.0",
+        "@angular/forms": "^5.0.0",
+        "@angular/platform-browser": "^5.0.0",
+        "@angular/platform-browser-dynamic": "^5.0.0",
         "hammerjs": "^2.0.8",
         "rxjs": "^5.5.2"
     },
     "devDependencies": {
-        "@angular/animations": "^4.4.4",
-        "@angular/common": "^4.4.4",
-        "@angular/compiler": "^4.4.4",
-        "@angular/compiler-cli": "^4.4.4",
-        "@angular/core": "^4.4.4",
-        "@angular/forms": "^4.4.4",
-        "@angular/platform-browser": "^4.4.4",
-        "@angular/platform-browser-dynamic": "^4.4.4",
-        "@angular/platform-server": "^4.4.4",
+        "@angular/compiler-cli": "^5.0.0",
+        "@angular/platform-server": "^5.0.0",
         "@types/hammerjs": "^2.0.35",
-        "@types/jasmine": "^2.6.0",
+        "@types/jasmine": "^2.6.2",
         "@types/karma": "^1.7.1",
-        "@types/node": "^8.0.31",
-        "@types/webpack": "^3.0.12",
-        "@types/webpack-env": "^1.13.1",
+        "@types/node": "^8.0.47",
+        "@types/webpack": "^3.0.14",
+        "@types/webpack-env": "^1.13.2",
         "angular2-template-loader": "^0.6.2",
-        "autoprefixer": "^7.1.4",
-        "awesome-typescript-loader": "^3.2.3",
+        "autoprefixer": "^7.1.6",
+        "awesome-typescript-loader": "^3.3.0",
         "coveralls": "^3.0.0",
         "concurrently": "^3.5.0",
         "css-loader": "^0.28.7",
         "gulp": "^3.9.1",
         "gulp-inline-ng2-template": "^4.0.0",
         "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
-        "hammerjs": "^2.0.8",
         "istanbul-instrumenter-loader": "^3.0.0",
         "jasmine-core": "^2.8.0",
         "json-loader": "^0.5.7",
@@ -85,25 +77,24 @@
         "karma-chrome-launcher": "^2.2.0",
         "karma-coverage-istanbul-reporter": "^1.3.0",
         "karma-jasmine": "^1.1.0",
-        "karma-mocha-reporter": "^2.2.4",
+        "karma-mocha-reporter": "^2.2.5",
         "karma-sourcemap-loader": "^0.3.7",
-        "karma-webpack": "^2.0.4",
+        "karma-webpack": "^2.0.5",
         "material-design-icons": "^3.0.1",
         "node-sass": "^4.5.3",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.6.2",
-        "rxjs": "^5.4.3",
-        "sass-lint": "^1.12.0",
+        "sass-lint": "^1.12.1",
         "sass-loader": "^6.0.6",
         "source-map-explorer": "^1.5.0",
         "to-string-loader": "^1.1.5",
         "ts-node": "^3.3.0",
         "tslint": "^5.8.0",
         "typedoc": "^0.9.0",
-        "typescript": "^2.5.3",
-        "webpack": "^3.6.0",
+        "typescript": "2.4.2",
+        "webpack": "^3.8.1",
         "webpack-angular-externals": "^1.0.2",
-        "webpack-rxjs-externals": "^1.0.0",
+        "webpack-rxjs-externals": "^1.1.0",
         "zone.js": "^0.8.18"
     }
 }
