--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ before_install:
 before_script:
 - npm install -g gulp
 script:
-- npm run ci
+- npm run lint
+- npm run build
+- npm run test
 - if [ "${TRAVIS_REPO_SLUG}" == "IgniteUI/igniteui-js-blocks" ]; then cat ./coverage/lcov.info | coveralls; fi
 
 before_deploy:
