--- a/package.json
+++ b/package.json
@@ -42,46 +42,48 @@
         "start:dev": "concurrently --raw --kill-others \"npm run build:esm:watch\" \"npm run start:demos\""
     },
     "dependencies": {
-        "@angular/animations": "^5.0.0",
-        "@angular/common": "^5.0.0",
-        "@angular/compiler": "^5.0.0",
-        "@angular/core": "^5.0.0",
-        "@angular/forms": "^5.0.0",
-        "@angular/platform-browser": "^5.0.0",
-        "@angular/platform-browser-dynamic": "^5.0.0",
+        "@angular/animations": "^5.1.3",
+        "@angular/common": "^5.1.3",
+        "@angular/compiler": "^5.1.3",
+        "@angular/core": "^5.1.3",
+        "@angular/forms": "^5.1.3",
+        "@angular/platform-browser": "^5.1.3",
+        "@angular/platform-browser-dynamic": "^5.1.3",
         "hammerjs": "^2.0.8",
-        "rxjs": "^5.5.2"
+        "rxjs": "^5.5.6"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "^5.0.0",
-        "@angular/platform-server": "^5.0.0",
+        "@angular/compiler-cli": "^5.1.3",
+        "@angular/platform-server": "^5.1.3",
         "@types/hammerjs": "^2.0.35",
         "@types/jasmine": "^2.6.3",
         "@types/karma": "^1.7.2",
-        "@types/node": "^8.0.47",
-        "@types/webpack": "^3.0.14",
-        "@types/webpack-env": "^1.13.2",
+        "@types/node": "^8.5.5",
+        "@types/webpack": "^3.8.2",
+        "@types/webpack-env": "^1.13.3",
         "angular2-template-loader": "^0.6.2",
-        "autoprefixer": "^7.1.6",
-        "awesome-typescript-loader": "^3.3.0",
+        "autoprefixer": "^7.2.4",
+        "awesome-typescript-loader": "^3.4.1",
+        "concurrently": "^3.5.1",
+        "copyfiles": "^1.2.0",
         "coveralls": "^3.0.0",
-        "concurrently": "^3.5.0",
         "css-loader": "^0.28.7",
         "gulp": "^3.9.1",
-        "gulp-inline-ng2-template": "^4.0.0",
+        "gulp-inline-ng2-template": "^4.1.0",
         "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
+        "html-webpack-plugin": "^2.30.1",
         "istanbul-instrumenter-loader": "^3.0.0",
         "jasmine-core": "^2.8.0",
         "json-loader": "^0.5.7",
         "karma": "^1.7.1",
         "karma-chrome-launcher": "^2.2.0",
-        "karma-coverage-istanbul-reporter": "^1.3.0",
-        "karma-jasmine": "^1.1.0",
+        "karma-coverage-istanbul-reporter": "^1.3.3",
+        "karma-jasmine": "^1.1.1",
         "karma-mocha-reporter": "^2.2.5",
         "karma-sourcemap-loader": "^0.3.7",
-        "karma-webpack": "^2.0.5",
+        "karma-webpack": "^2.0.9",
         "material-design-icons": "^3.0.1",
-        "node-sass": "^4.5.3",
+        "node-sass": "^4.7.2",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.6.2",
         "sass-lint": "^1.12.1",
@@ -92,9 +94,10 @@
         "tslint": "^5.8.0",
         "typedoc": "^0.9.0",
         "typescript": "2.4.2",
-        "webpack": "^3.8.1",
+        "webpack": "^3.10.0",
         "webpack-angular-externals": "^1.0.2",
+        "webpack-dev-server": "^2.9.7",
         "webpack-rxjs-externals": "^1.1.0",
-        "zone.js": "^0.8.18"
+        "zone.js": "^0.8.19"
     }
 }
