Replace: sass-lint with style lint.

--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
         "angular2-template-loader": "^0.6.2",
         "autoprefixer": "^7.2.5",
         "awesome-typescript-loader": "^3.4.1",
-        "coveralls": "^3.0.0",
         "concurrently": "^3.5.1",
+        "coveralls": "^3.0.0",
         "css-loader": "^0.28.8",
         "gulp": "^3.9.1",
         "gulp-inline-ng2-template": "^4.1.0",
@@ -84,9 +84,10 @@
         "node-sass": "^4.7.2",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.6.2",
-        "sass-lint": "^1.12.1",
         "sass-loader": "^6.0.6",
         "source-map-explorer": "^1.5.0",
+        "stylelint": "^8.4.0",
+        "stylelint-scss": "^2.3.0",
         "to-string-loader": "^1.1.5",
         "ts-node": "^4.1.0",
         "tslint": "^5.9.1",
