--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "test": "karma start",
         "test:watch": "karma start --auto-watch --use-polling --no-single-run",
         "tslint": "tslint",
+        "stylelint": "stylelint 'src/themes'",
         "sass-lint": "sass-lint",
         "start:demos": "npm run build && cd demos && npm start",
         "start:dev": "concurrently --raw --kill-others \"npm run build:esm:watch\" \"npm run start:demos\""
