Update: Stylelint nesting rules. Add: Stylelint ignore file temporarily to not lint the old stylesheet definitions.

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -68,6 +68,8 @@
         "scss/selector-no-redundant-nesting-selector": true,
         "scss/dollar-variable-colon-newline-after": null,
         "scss/dollar-variable-colon-space-after": "always",
-        "max-nesting-depth": 2
+        "max-nesting-depth": [2, {
+            "severity": "warning"
+        }]
     }
 }
