Add stylelint to the linting scripts.

--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
         "clean": "rimraf coverage tmp dist",
         "codecov": "cat coverage/lcov.info | coveralls",
         "explorer": "source-map-explorer dist/index.umd.js",
-        "lint": "npm run tslint 'src/**/*.ts'",
+        "lint": "npm run tslint 'src/**/*.ts' && npm run stylelint 'src/themes'",
         "ngcompile": "ngc -p tsconfig-aot.json",
         "prebuild": "rimraf dist tmp",
         "prebuild:watch": "rimraf dist tmp",
         "test": "karma start",
         "test:watch": "karma start --auto-watch --use-polling --no-single-run",
         "tslint": "tslint",
-        "stylelint": "stylelint 'src/themes'",
+        "stylelint": "stylelint",
         "sass-lint": "sass-lint",
         "start:demos": "npm run build && cd demos && npm start",
         "start:dev": "concurrently --raw --kill-others \"npm run build:esm:watch\" \"npm run start:demos\""
