Improve: Order stylelint rules alphabetically. Basic rules first, then by plugin.

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,75 +1,75 @@
 {
     "plugins": ["stylelint-scss"],
     "rules": {
-        "string-quotes": "single",
-        "declaration-colon-space-after": "always",
-        "indentation": 4,
+        "block-closing-brace-empty-line-before": "never",
+        "block-closing-brace-newline-after": "always-single-line",
         "block-no-empty": true,
-        "selector-pseudo-class-no-unknown": true,
-        "color-no-invalid-hex": true,
         "color-hex-case": "lower",
         "color-hex-length": "short",
+        "color-no-invalid-hex": true,
+        "comment-no-empty": true,
+        "declaration-block-no-duplicate-properties": true,
+        "declaration-block-no-shorthand-property-overrides": true,
+        "declaration-block-single-line-max-declarations": 1,
+        "declaration-colon-space-after": "always",
         "font-family-no-duplicate-names": true,
         "font-family-no-missing-generic-family-keyword": true,
         "font-weight-notation": "numeric",
-        "property-no-unknown": true,
-        "declaration-block-no-duplicate-properties": true,
-        "declaration-block-no-shorthand-property-overrides": true,
-        "selector-pseudo-element-no-unknown": true,
         "function-calc-no-unspaced-operator": true,
         "function-comma-space-after": "always-single-line",
-        "selector-type-no-unknown": [true, {
-            "ignore": ["custom-elements"]
+        "indentation": 4,
+        "length-zero-no-unit": true,
+        "max-nesting-depth": [2, {
+            "severity": "warning"
         }],
-        "comment-no-empty": true,
         "no-duplicate-at-import-rules": true,
         "no-duplicate-selectors": true,
         "no-extra-semicolons": true,
         "no-invalid-double-slash-comments": true,
+        "no-missing-end-of-source-newline": true,
         "number-leading-zero": "never",
         "number-no-trailing-zeros": true,
-        "shorthand-property-no-redundant-values": true,
-        "value-no-vendor-prefix": true,
-        "length-zero-no-unit": true,
-        "unit-case": "lower",
-        "value-keyword-case": "lower",
-        "value-list-comma-space-after": "always-single-line",
-        "no-missing-end-of-source-newline": true,
-        "block-closing-brace-empty-line-before": "never",
-        "block-closing-brace-newline-after": "always-single-line",
-        "declaration-block-single-line-max-declarations": 1,
+        "property-no-unknown": true,
+        "rule-empty-line-before": ["always-multi-line", {
+            "except": ["first-nested"],
+            "ignore": ["after-comment"]
+        }],
         "selector-attribute-quotes": "always",
         "selector-attribute-operator-space-after": "never",
         "selector-attribute-operator-space-before": "never",
         "selector-combinator-space-after": "always",
         "selector-combinator-space-before": "always",
         "selector-descendant-combinator-no-non-space": true,
+        "selector-list-comma-newline-after": "always",
         "selector-pseudo-class-case": "lower",
+        "selector-pseudo-class-no-unknown": true,
         "selector-pseudo-class-parentheses-space-inside": "never",
         "selector-pseudo-element-case": "lower",
         "selector-pseudo-element-colon-notation": "double",
+        "selector-pseudo-element-no-unknown": true,
         "selector-type-case": "lower",
-        "selector-list-comma-newline-after": "always",
-        "rule-empty-line-before": ["always-multi-line", {
-            "except": ["first-nested"],
-            "ignore": ["after-comment"]
+        "selector-type-no-unknown": [true, {
+            "ignore": ["custom-elements"]
         }],
+        "shorthand-property-no-redundant-values": true,
+        "string-quotes": "single",
+        "unit-case": "lower",
+        "value-keyword-case": "lower",
+        "value-list-comma-space-after": "always-single-line",
+        "value-no-vendor-prefix": true,
         "scss/at-else-closing-brace-newline-after": "always-last-in-chain",
         "scss/at-else-closing-brace-space-after": "always-intermediate",
         "scss/at-else-empty-line-before": "never",
+        "scss/at-extend-no-missing-placeholder": true,
         "scss/at-if-closing-brace-newline-after": "always-last-in-chain",
         "scss/at-if-closing-brace-space-after": "always-intermediate",
-        "scss/at-extend-no-missing-placeholder": true,
         "scss/at-import-no-partial-leading-underscore": true,
         "scss/at-mixin-argumentless-call-parentheses": "always",
         "scss/at-mixin-parentheses-space-before": "never",
         "scss/at-rule-no-unknown": true,
         "scss/double-slash-comment-inline": "never",
-        "scss/selector-no-redundant-nesting-selector": true,
         "scss/dollar-variable-colon-newline-after": null,
         "scss/dollar-variable-colon-space-after": "always",
-        "max-nesting-depth": [2, {
-            "severity": "warning"
-        }]
+        "scss/selector-no-redundant-nesting-selector": true
     }
 }
