--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
         "build:umd": "webpack --config webpack-umd.config.ts",
         "build:umd:watch": "npm run build:umd -- --watch",
         "build:docs": "typedoc src/",
+        "build:styles": "npm run stylelint && gulp build-style",
         "ci": "npm run lint && npm run test && npm run build",
         "clean": "rimraf coverage tmp dist",
         "codecov": "cat coverage/lcov.info | coveralls",
         "explorer": "source-map-explorer dist/index.umd.js",
-        "lint": "npm run tslint 'src/**/*.ts' && npm run stylelint 'src/themes'",
+        "lint": "npm run tslint 'src/**/*.ts' && npm run stylelint",
         "ngcompile": "ngc -p tsconfig-aot.json",
         "prebuild": "rimraf dist tmp",
         "prebuild:watch": "rimraf dist tmp",
         "test": "karma start",
         "test:watch": "karma start --auto-watch --use-polling --no-single-run",
         "tslint": "tslint",
-        "stylelint": "stylelint",
+        "stylelint": "stylelint 'src/themes'",
         "sass-lint": "sass-lint",
         "start:demos": "npm run build && cd demos && npm start",
         "start:dev": "concurrently --raw --kill-others \"npm run build:esm:watch\" \"npm run start:demos\""
