build(styles): switch to gulp-sass with sourcemaps
Use gulp-sass to build themes and move the compiled themes to
dest/styles.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "scripts": {
         "build": "npm run build:esm && npm run build:umd && gulp make-packagejson",
         "build:watch": "concurrently --raw --kill-others \"npm run build:umd:watch\" \"npm run build:esm:watch\"",
-        "build:esm": "gulp build:esm && gulp build-style",
+        "build:esm": "gulp build:esm",
         "build:esm:watch": "gulp build:esm:watch",
         "build:umd": "webpack --config webpack-umd.config.ts",
         "build:umd:watch": "npm run build:umd -- --watch",
@@ -71,6 +71,9 @@
         "css-loader": "^0.28.8",
         "gulp": "^3.9.1",
         "gulp-inline-ng2-template": "^4.1.0",
+        "gulp-postcss": "^7.0.1",
+        "gulp-sass": "^3.1.0",
+        "gulp-sourcemaps": "^2.6.4",
         "hammer-simulator": "git+https://github.com/hammerjs/simulator.git",
         "istanbul-instrumenter-loader": "^3.0.0",
         "jasmine-core": "^2.8.0",
@@ -82,7 +85,6 @@
         "karma-mocha-reporter": "^2.2.5",
         "karma-sourcemap-loader": "^0.3.7",
         "karma-webpack": "^2.0.9",
-        "material-design-icons": "^3.0.1",
         "node-sass": "^4.7.2",
         "raw-loader": "^0.5.1",
         "rimraf": "^2.6.2",
