--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ demos/vendor.js
 demos/main.js
 demos/index.html
 !demos/webpack.config.js
+!demos/postcss.config.js
 !demos/gulpfile.js
 
 src/**/*.js
