fix(demos): compile styles to text before loading

--- a/package.json
+++ b/package.json
@@ -67,9 +67,10 @@
         "autoprefixer": "^7.2.5",
         "awesome-typescript-loader": "^3.4.1",
         "codelyzer": "^4.1.0",
-        "coveralls": "^3.0.0",
         "concurrently": "^3.5.1",
+        "coveralls": "^3.0.0",
         "css-loader": "^0.28.8",
+        "extract-text-webpack-plugin": "^3.0.2",
         "gulp": "^3.9.1",
         "gulp-inline-ng2-template": "^4.1.0",
         "gulp-postcss": "^7.0.1",
